--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Application
-html/app/plugins
-html/app/mu-plugins
-html/app/upgrade
-html/app/uploads
-html/app/cache/
+html/wpapp/plugins
+html/wpapp/mu-plugins
+html/wpapp/upgrade
+html/wpapp/uploads
+html/wpapp/cache/
 
 # WordPress
 html/wp
@@ -11,7 +11,6 @@ html/wp
 # Logs
 *.log
 docker-compose.env
-ssl
 
 # Dotenv
 .env
