--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,13 @@ WP_ENV="development"
 WP_HOME="http://localhost"
 WP_SITEURL="http://localhost/wp"
 
+POSTMARK_API_TOKEN="secret"
+
 MINIO_BUCKET="tip-wp"
 MINIO_ENDPOINT="minio:9000"
 MINIO_ACCESSKEY="minioadmin"
 MINIO_SECRETKEY="minioadmin"
+MINIO_USESSL="false"
 BUCKET_URL="localhost:9930"
 
 AUTH_KEY="secret"
