--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ MINIO_SECRETKEY="minioadmin"
 MINIO_USESSL="false"
 BUCKET_URL="localhost:9930"
 
-NTIS_API_URL="https://staging-tip.ntis.lt/api"
+TIP_API_URL="https://staging-tip.ntis.lt/api"
 
 AUTH_KEY="secret"
 SECURE_AUTH_KEY="secret"
